# RKNPUTools

npu_transfer_proxy/android-arm64-v8a/: npu_transfer_proxy
npu_transfer_proxy/android-armeabi-v7a/: npu_transfer_proxy
npu_transfer_proxy/linux-aarch64/: npu_transfer_proxy
npu_transfer_proxy/linux-x86_64/: npu_transfer_proxy
ntbd/: README.txt  ntbd
rknn-api-v0.9.1/Android/rk_ssd_demo/: README.md
rknn-api-v0.9.1/Android/rk_ssd_demo/app/: CMakeLists.txt  build.gradle
rknn-api-v0.9.1/Android/rk_ssd_demo/app/src/main/java/com/rockchip/gpadc/ssddemo/: CameraSurfaceRender.java  MainActivity.java  PostProcess.java
rknn-api-v0.9.1/Android/rk_ssd_demo/app/src/main/jni/: direct_texture.cc  direct_texture.h  rknn_api.h  ssd_image.cc
rknn-api-v0.9.1/Android/rk_ssd_demo/app/src/main/res/values/: strings.xml
rknn-api-v0.9.1/Android/rk_ssd_demo/prebuilt/libDirectTexture/etc/: public.libraries.txt.demo
rknn-api/Android/rk_ssd_demo/app/src/main/jni/: rknn_api.h
rknn-api/Android/rknn_api/include/: rknn_api.h
rknn-api/Linux/rknn_api_sdk/: CMakeLists.txt
rknn-api/Linux/rknn_api_sdk/rknn_api/arm/include/: rknn_api.h
rknn-api/Linux/rknn_api_sdk/rknn_api/include/: rknn_api.h
rknn-api/Linux/rknn_api_sdk/rknn_api/x86/include/: rknn_api.h
rknn-api/MacOS/rknn_api_sdk/rknn_api/x86/include/: rknn_api.h
rknn-api/MacOS/rknn_api_sdk/rknn_api/x86/lib64/: librknn_api.dylib
rknn-toolkit/doc/: changelog-v0.9.9.txt
rknn-toolkit/example/mobilenet_v1/: test.py
